2000-12-28  Arturo Tena <arturo@directmail.org>

	* Bonobo_Sample_Hello.oafinfo: fix naming.

2000-12-14  Michael Meeks  <michael@helixcode.com>

	* Makefile.am (bin_PROGRAMS): upd.

2000-12-04  Joe Shaw  <joe@helixcode.com>

	* bonobo-hello.c: Use BonoboGenericFactory instead.

2000-12-04  Joe Shaw  <joe@helixcode.com>

	* bonobo-hello.c: Fix the build by including
	bonobo/bonobo-embeddable-factory.h since it was removed from bonobo.h.
	This should be fixed to use the generic factory.

2000-09-21  Michael Meeks  <michael@helixcode.com>

	* hello.oafinfo: switch to Bonobo/ObjectFactory.

2000-09-17  ERDI Gergo  <cactus@cactus.rulez.org>

	* hello.oafinfo: Added entry about Bonobo::Print implementation

2000-07-14  Michael Meeks  <michael@helixcode.com>

	* hello.oafinfo: make uuids match.

	* bonobo-hello.c (hello_bonobo_init): make uuids match

2000-07-12  Michael Meeks  <michael@helixcode.com>

	* bonobo-hello.c (main): add bonobo_shutdown.
	(server_factory_init): bind to the Orb.

	* hello-embeddable.c (hello_bonobo_embeddable_construct): use
	bonobo_object_unref not gtk_object_destroy.

	* hello-view.c (hello_bonobo_view_factory): ditto.

2000-07-07  Michael Meeks  <michael@helixcode.com>

	* hello.oafinfo: kill unimplemented ProgressiveDataSink I/F.

2000-07-06  Michael Meeks  <michael@helixcode.com>

	* hello-model.[ch]: Remove.

	* hello-embeddable.[ch]: New file.

	* hello-view.[ch]: Totaly re-write.

	* hello.oafinfo: use uuids.

	* bonobo-hello.c: Substantialy re-write.

2000-07-05  Michael Meeks  <michael@helixcode.com>

	* hello-object-io.c (hello_object_pstream_load): update read_string
	call.

2000-06-27  Michael Meeks  <michael@helixcode.com>

	* hello-view.c (view_clicked_cb): prettify.
	kill redundant prototypes.

2000-06-26  Michael Meeks  <michael@helixcode.com>

	* hello-object-io.c (hello_object_stream_read): kill, move to
	(hello_object_pstream_load): and drasticaly simplify removing henious
	coding. (hello_object_pstream_save): ditto.
