@@ -1,3 +1,7 @@
+2001-01-16  Dietmar Maurer  <dietmar@ximian.com>
+
+	* bonobo-hello.c (hello_bonobo_init): use the new unref code.
+
 2000-12-28  Arturo Tena <arturo@directmail.org>
 
 	* Bonobo_Sample_Hello.oafinfo: fix naming.
